# esp32-ble-volume-trigger

./: .gitignore  CMakeLists.txt
main/: CMakeLists.txt  ble_hidd_demo_main.c  ble_hidd_demo_main.cpp
